--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.18", features = ["derive"] }
-memmap = "0.7.0"
+memmap2 = "0.9.5"
 rayon = "1.10.0"
